--- a/DM2022-Lab2-Homework.ipynb
+++ b/DM2022-Lab2-Homework.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name: 張方瑜\n",
     "\n",
-    "Student ID:\n",
+    "Student ID: 111065539\n",
     "\n",
-    "GitHub ID:\n",
+    "GitHub ID: RolaChang\n",
     "\n",
-    "Kaggle name:\n",
+    "Kaggle name: RolaaaChang\n",
     "\n",
     "Kaggle private scoreboard snapshot:\n",
     "\n",
